Feat: 체력 구현 및 데미지 적용

--- a/index.html
+++ b/index.html
@@ -4,9 +4,76 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ActionFight!</title>
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+    </style>
   </head>
   <body>
-    <canvas></canvas>
+    <div style="position: relative; display: inline-block">
+      <div
+        style="
+          position: absolute;
+          display: flex;
+          width: 100%;
+          align-items: center;
+          padding: 20px;
+        "
+      >
+        <!-- 플레이어 체력 -->
+        <div
+          style="
+            position: relative;
+            height: 30px;
+            width: 100%;
+            display: flex;
+            justify-content: flex-end;
+          "
+        >
+          <div
+            style="background-color: yellow; height: 30px; width: 100%"
+          ></div>
+          <div
+            id="playerHealth"
+            style="
+              position: absolute;
+              background: blue;
+              top: 0;
+              bottom: 0;
+              right: 0;
+              width: 100%;
+            "
+          ></div>
+        </div>
+        <!-- 타이머 -->
+        <div
+          style="
+            background-color: red;
+            width: 100px;
+            height: 100px;
+            flex-shrink: 0;
+          "
+        ></div>
+        <!-- 상대방 체력 -->
+        <div style="position: relative; height: 30px; width: 100%">
+          <div style="background-color: yellow; height: 30px"></div>
+          <div
+            id="enemyHealth"
+            style="
+              position: absolute;
+              background: blue;
+              top: 0;
+              left: 0;
+              bottom: 0;
+              right: 0;
+            "
+          ></div>
+        </div>
+      </div>
+
+      <canvas></canvas>
+    </div>
   </body>
   <script src="index.js"></script>
 </html>
