--- a/index.html
+++ b/index.html
@@ -48,13 +48,19 @@
         </div>
         <!-- 타이머 -->
         <div
+          id="timer"
           style="
             background-color: red;
             width: 100px;
             height: 100px;
             flex-shrink: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
           "
-        ></div>
+        >
+          10
+        </div>
         <!-- 상대방 체력 -->
         <div style="position: relative; height: 30px; width: 100%">
           <div style="background-color: yellow; height: 30px"></div>
@@ -71,7 +77,22 @@
           ></div>
         </div>
       </div>
-
+      <div
+        id="displayText"
+        style="
+          position: absolute;
+          color: white;
+          align-items: center;
+          justify-content: center;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          display: none;
+        "
+      >
+        Time
+      </div>
       <canvas></canvas>
     </div>
   </body>
