Feat: Add Background

--- a/index.html
+++ b/index.html
@@ -96,5 +96,7 @@
       <canvas></canvas>
     </div>
   </body>
+  <script src="js/utils.js"></script>
+  <script src="js/classes.js"></script>
   <script src="index.js"></script>
 </html>
